--- a/fridgeItMobile/package.json
+++ b/fridgeItMobile/package.json
@@ -7,8 +7,20 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"axios": "^0.16.2",
+		"firebase": "^4.5.0",
+		"history": "^4.7.2",
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.48.4"
+		"react-native": "0.48.4",
+		"react-redux": "^5.0.6",
+		"react-router-dom": "^4.2.2",
+		"react-router-redux": "^4.0.8",
+		"redux": "^3.7.2",
+		"redux-logger": "^3.0.6",
+		"redux-persist": "^4.10.1",
+		"redux-promise-middleware": "^4.4.1",
+		"redux-thunk": "^2.2.0",
+		"unirest": "^0.5.1"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
