--- a/fridgeItMobile/package.json
+++ b/fridgeItMobile/package.json
@@ -12,8 +12,9 @@
 		"history": "^4.7.2",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.4",
+		"react-native-local-storage": "^1.5.2",
 		"react-redux": "^5.0.6",
-		"react-router-dom": "^4.2.2",
+		"react-router-native": "^4.2.0",
 		"react-router-redux": "^4.0.8",
 		"redux": "^3.7.2",
 		"redux-logger": "^3.0.6",
