--- a/fridgeItMobile/package.json
+++ b/fridgeItMobile/package.json
@@ -12,7 +12,7 @@
 		"history": "^4.7.2",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.4",
-		"react-native-local-storage": "^1.5.2",
+		"react-native-storage": "^0.2.2",
 		"react-redux": "^5.0.6",
 		"react-router-native": "^4.2.0",
 		"react-router-redux": "^4.0.8",
