--- a/fridgeItMobile/package.json
+++ b/fridgeItMobile/package.json
@@ -10,7 +10,9 @@
 		"axios": "^0.16.2",
 		"firebase": "^4.5.0",
 		"history": "^4.7.2",
+		"moment": "^2.18.1",
 		"react": "16.0.0-alpha.12",
+		"react-datepicker": "^0.55.0",
 		"react-native": "0.48.4",
 		"react-native-storage": "^0.2.2",
 		"react-redux": "^5.0.6",
