--- a/fridgeItMobile/package.json
+++ b/fridgeItMobile/package.json
@@ -14,6 +14,7 @@
 		"react": "16.0.0-alpha.12",
 		"react-datepicker": "^0.55.0",
 		"react-native": "0.48.4",
+		"react-native-datepicker": "^1.6.0",
 		"react-native-storage": "^0.2.2",
 		"react-redux": "^5.0.6",
 		"react-router-native": "^4.2.0",
