--- a/fridgeItMobile/package.json
+++ b/fridgeItMobile/package.json
@@ -16,6 +16,7 @@
 		"react-native": "0.48.4",
 		"react-native-datepicker": "^1.6.0",
 		"react-native-storage": "^0.2.2",
+		"react-native-svg-uri": "^1.2.1",
 		"react-redux": "^5.0.6",
 		"react-router-native": "^4.2.0",
 		"react-router-redux": "^4.0.8",
