--- a/fridgeItMobile/package.json
+++ b/fridgeItMobile/package.json
@@ -13,6 +13,7 @@
 		"moment": "^2.18.1",
 		"react": "16.0.0-alpha.12",
 		"react-datepicker": "^0.55.0",
+		"react-moment": "^0.6.5",
 		"react-native": "0.48.4",
 		"react-native-datepicker": "^1.6.0",
 		"react-native-storage": "^0.2.2",
